[bumpversion]
current_version = 0.0.1
tag-name = "v{new_version}"
tag-message = "Release {new_version}"
tag = True
commit = True

[metadata]
name = repeat
version = attr: repeat.__version__
description = Copy input to output until EOF then repeat the output stream one or more times.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://www.github.com/rstms/repeat
classifiers =
 Programming Language :: Python :: 3
 License :: OSI Approved :: MIT License
 Operating System :: OS Independent
 Environment :: Console

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
	click
[options.extras_require]
test =
	pytest
	pytest-click
	tox
dev =
	bumpversion
	tox
	twine
	yapf
	j2cli
	sphinx
	sphinx-click
	sphinx-rtd-theme
	sphinx-serve

[options.package_data]
* = 
	VERSION
	LICENSE

[options.entry_points]
console_scripts = 
	repeat = repeat:cli

[bumpversion:file:VERSION]
[bumpversion:file:repeat/version.py]
