[bumpversion]
current_version = 0.0.1
tag-name = "v{new_version}"
tag-message = "Release {new_version}"
tag = True
commit = True

[metadata]
name = {{ project.name }}
version = attr: {{ project.name }}.__version__
description = {{ project.description.medium }}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{ project.license }}
url = {{ project.url }}
classifiers =
 Programming Language :: Python :: 3
 License :: OSI Approved :: MIT License
 Operating System :: OS Independent
 Environment :: Console

[options]
python_requires = {{ project.python_requires }}
packages = find:
zip_safe = False
include_package_data = True
install_requires ={% for module in project.modules.install %}
	{{ module }}{% endfor %}
[options.extras_require]
test ={% for module in project.modules.test %}
	{{ module }}{% endfor %}
dev ={% for module in project.modules.dev %}
	{{ module }}{% endfor %}

[options.package_data]
* = 
	VERSION
	LICENSE

[options.entry_points]
console_scripts = 
	{{ project.name }} = {{ project.name }}:cli

[bumpversion:file:VERSION]
[bumpversion:file:{{ project.name }}/version.py]
